--- a/src/components/LoadingScreen/loadingScreen.css
+++ b/src/components/LoadingScreen/loadingScreen.css
@@ -1,21 +1,21 @@
 .loadingCover {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    background-color: #4369b2;
-    height: 100vh;
-    opacity: 0.8;
-    display: flex;
-    z-index: 999 !important;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  background-color: #4369b2;
+  height: 100vh;
+  opacity: 0.8;
+  display: flex;
+  z-index: 999 !important;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .loadingCover img {
   width: 220px;
-    height: fit-content;
+  height: auto;
 }
 
 .ant-spin-dot-item {
@@ -28,5 +28,5 @@
 }
 
 .ErrorSpinner {
-  color: antiquewhite;;
+  color: antiquewhite;
 }
