--- a/src/components/SelectedCountryInfo/selectedCountryInfo.css
+++ b/src/components/SelectedCountryInfo/selectedCountryInfo.css
@@ -12,20 +12,24 @@
 
 .infoAlign {
   display: flex;
-    justify-content: space-between;
-    padding: 10px;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 .infoAlign span {
   color: white;
   font-family: 'Lato', sans-serif;
-  font-weight: 700
+  font-weight: 700;
 }
 
-.info0, .info2, .info4 {
+.info0,
+.info2,
+.info4 {
   background-color: #3a70d0;
 }
 
-.info1, .info3, .info5 {
+.info1,
+.info3,
+.info5 {
   background-color: #3661b0;
 }
