--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #5687E4 !important;
+  background-color: #5687e4 !important;
 }
 
 code {
